# shared/openApi.yaml
@@ -358,6 +358,28 @@ paths:
           $ref: '#/components/responses/Error'
         '401':
           $ref: '#/components/responses/Error'
+  /administration/sales:
+    get:
+      tags:
+        - administration
+      summary: Retrieve all sales
+      responses:
+        '200':
+          $ref: '#/components/responses/SalesList'
+        '401':
+          $ref: '#/components/responses/Error'
+        '404':
+          $ref: '#/components/responses/Error'
+  /administration/users:
+    get:
+      tags:
+        - administration
+      summary: Retrieve all users
+      responses:
+        '200':
+          $ref: '#/components/responses/UserList'
+        '401':
+          $ref: '#/components/responses/Error'
   /administration/change-role/{userId}:
     post:
       tags:
@@ -378,6 +400,22 @@ paths:
         '404':
           $ref: '#/components/responses/Error'
         '401':
+          $ref: '#/components/responses/Error'
+  /administration/refund-deposit:
+    post:
+      tags:
+        - administration
+      summary: Refund deposit of a payment transaction
+      requestBody:
+        $ref: '#/components/requestBodies/RefundDeposit'
+      responses:
+        '200':
+          $ref: '#/components/responses/Success'
+        '400':
+          $ref: '#/components/responses/Error'
+        '401':
+          $ref: '#/components/responses/Error'
+        '404':
           $ref: '#/components/responses/Error'
 security:
   - bearerAuth: []
@@ -468,6 +506,22 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/RentContract'
+    UserList:
+      description: List of users
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/UserProfile'
+    SalesList:
+      description: List of sales
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Sale'
   requestBodies:
     UserRegistration:
       description: User registration
@@ -535,6 +589,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ChangeRole'
+    RefundDeposit:
+      description: Refund deposit
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/RefundDeposit'
   schemas:
     Success:
       type: object
@@ -574,11 +634,16 @@ components:
           type: boolean
     UserProfile:
       type: object
+      allOf:
+        - $ref: '#/components/schemas/ChangeRole'
+        - type: object
+          properties:
+            id:
+              type: string
+              description: Unique identifier for the user
       properties:
         email:
           type: string
-        role:
-          $ref: '#/components/schemas/Role'
       required:
         - email
         - role
@@ -743,6 +808,9 @@ components:
             renterInfo:
               type: object
               properties:
+                userId:
+                  type: string
+                  description: Unique identifier for the renter
                 rentalStartDate:
                   type: integer
                   format: int64
@@ -879,6 +947,9 @@ components:
     PaymentInstructions:
       type: object
       properties:
+        paymentTransactionId:
+          type: string
+          description: Unique identifier for the payment transaction
         paymentMethodId:
           $ref: '#/components/schemas/PaymentMethod'
         dynamicAttributes:
@@ -887,6 +958,7 @@ components:
           description: Dynamic attributes for the payment instructions
       required:
         - paymentMethodId
+        - paymentTransactionId
     RentContract:
       type: object
       properties:
@@ -929,3 +1001,56 @@ components:
         returnLocationId:
           type: string
           description: Unique identifier for the return location
+    Sale:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the sale
+        productId:
+          type: string
+          description: Unique identifier for the product
+        userId:
+          type: string
+          description: Unique identifier for the user
+        price:
+          type: number
+          format: int64
+          description: Price of the sale
+        paid:
+          type: boolean
+          description: Indicates whether the sale has been paid
+        deposit:
+          type: number
+          format: int64
+          description: Deposit amount for the sale
+        createdAt:
+          type: integer
+          format: int64
+          description: Unix timestamp for the creation date of the sale
+        paidAt:
+          type: integer
+          format: int64
+          description: Unix timestamp for the payment date of the sale
+        returnedAt:
+          type: integer
+          format: int64
+          description: Unix timestamp for the return date of the sale
+        depositRefundedAmount:
+          type: number
+          format: int64
+          description: Amount of the deposit that has been refunded
+        depositRefundedAt:
+          type: integer
+          format: int64
+          description: Unix timestamp for the deposit refund date
+    RefundDeposit:
+      type: object
+      properties:
+        paymentTransactionId:
+          type: string
+          description: Unique identifier for the payment transaction
+        depositRefundedAmount:
+          type: number
+          format: int64
+          description: Amount of the deposit that has been refunded
