# src/backend/open-api/models/model_sale.go
@@ -1,0 +1,57 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type Sale struct {
+
+	// Unique identifier for the sale
+	Id string `json:"id,omitempty"`
+
+	// Unique identifier for the product
+	ProductId string `json:"productId,omitempty"`
+
+	// Unique identifier for the user
+	UserId string `json:"userId,omitempty"`
+
+	// Price of the sale
+	Price int64 `json:"price,omitempty"`
+
+	// Indicates whether the sale has been paid
+	Paid bool `json:"paid,omitempty"`
+
+	// Deposit amount for the sale
+	Deposit int64 `json:"deposit,omitempty"`
+
+	// Unix timestamp for the creation date of the sale
+	CreatedAt int64 `json:"createdAt,omitempty"`
+
+	// Unix timestamp for the payment date of the sale
+	PaidAt int64 `json:"paidAt,omitempty"`
+
+	// Unix timestamp for the return date of the sale
+	ReturnedAt int64 `json:"returnedAt,omitempty"`
+
+	// Amount of the deposit that has been refunded
+	DepositRefundedAmount int64 `json:"depositRefundedAmount,omitempty"`
+
+	// Unix timestamp for the deposit refund date
+	DepositRefundedAt int64 `json:"depositRefundedAt,omitempty"`
+}
+
+// AssertSaleRequired checks if the required fields are not zero-ed
+func AssertSaleRequired(obj Sale) error {
+	return nil
+}
+
+// AssertSaleConstraints checks if the values respects the defined constraints
+func AssertSaleConstraints(obj Sale) error {
+	return nil
+}
